th: woodpecker: expose host docker socket for now until i have time to make docker-in-docker work

--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -3,17 +3,23 @@ pipeline:
     image: docker
     commands:
       - echo $REGISTRY_SECRET | docker login -u ariadne --password-stdin gitea.treehouse.systems
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     when:
       event: [push, tag]
     secrets: [REGISTRY_SECRET]
 
   build:
     image: docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     commands:
       - docker image build -f Dockerfile . -t gitea.treehouse.systems/treehouse/mastodon:latest
 
   push:
     image: docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     commands:
       - docker image push --all-tags gitea.treehouse.systems/treehouse/mastodon
     when:
