--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+# Ignore local dotenv overrides
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Ignore bundler config and downloaded libraries.
 /.bundle
 /vendor/bundle
@@ -13,7 +18,7 @@
 /db/*.sqlite3-journal
 
 # Ignore the dev postgres db we created.
-/data/postgres15/*
+/data/postgres*/*
 
 # Ignore all logfiles and tempfiles.
 .eslintcache
