th: rewrite instructions for a self-contained dev env

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 LOCAL_DOMAIN=localhost
-DB_HOST=$(pwd)/data/postgres15
+
+DB_HOST=$(pwd)/data/postgres
 DB_USER=mastodon
-DB_NAME=mastodon_development
+DB_NAME=mastodon_dev
+REDIS_URL=redis://$(pwd)/data/redis/redis-dev.sock
