--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,8 @@ NODE_ENV=tests
 # Federation
 LOCAL_DOMAIN=cb6e6126.ngrok.io
 LOCAL_HTTPS=true
+
+DB_HOST=$(pwd)/data/postgres
+DB_USER=mastodon
+DB_NAME=mastodon_dev
+REDIS_URL=redis://$(pwd)/data/redis/redis-test.sock
