th: fix redis conf

--- a/redis-dev.conf
+++ b/redis-dev.conf
@@ -3,9 +3,9 @@
 daemonize yes
 
 dir ./data/redis
-pidfile ./data/redis/redis-dev.pid
+pidfile ./redis-dev.pid
 
-unixsocket ./data/redis/redis-dev.sock
+unixsocket ./redis-dev.sock
 unixsocketperm 700
 
 # Disable TCP
