th: fix REDIS_URL unix socket path parsing for relative paths

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 LOCAL_DOMAIN=localhost
+ALTERNATE_DOMAINS=mastodon.internal
 
 DB_HOST=$(pwd)/data/postgres
 DB_USER=mastodon
 DB_NAME=mastodon_dev
-REDIS_URL=redis://$(pwd)/data/redis/redis-dev.sock
+REDIS_URL=unix://./data/redis/redis-dev.sock
