--- a/.env.test
+++ b/.env.test
@@ -7,4 +7,4 @@ LOCAL_HTTPS=true
 DB_HOST=$(pwd)/data/postgres
 DB_USER=mastodon
 DB_NAME=mastodon_dev
-REDIS_URL=redis://$(pwd)/data/redis/redis-test.sock
+REDIS_URL=unix://./data/redis/redis-dev.sock
